test/force-app/main/default/objects/Soundbite__c/Soundbite__c.object-meta.xml
<CustomObject>
    <label>Soundbite</label>
    <nameField>
        <displayFormat>SB-{0000}</displayFormat>
        <label>Soundbite ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Soundbites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>