test/force-app/main/default/objects/Soundbite__c/fields/Customers_Partner__c.field-meta.xml
<CustomField>
    <fullName>Customers_Partner__c</fullName>
    <label>Customers/Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Soundbites</relationshipLabel>
    <relationshipName>Soundbites</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>