test/force-app/main/default/objects/Soundbite__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <inlineHelpText>List any positive remarks from a customer/partner here</inlineHelpText>
    <label>Quote</label>
    <type>TextArea</type>
</CustomField>