test/force-app/main/default/objects/Soundbite__c/listViews/All_Soundbites.listView-meta.xml
<ListView>
    <fullName>All_Soundbites</fullName>
    <columns>Contact__c</columns>
    <columns>Customers_Partner__c</columns>
    <columns>Quote__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Soundbites</label>
</ListView>